--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
